header paragraph added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 class="header-title">"In the near future, I hope to become a Developer."
             </h1>
             <p class="header-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa a qui dolore repudiandae adipisci hic error et perferendis labore distinctio.
+                Web development is no child’s play. You need to have the right skill set. You must be able to play with your creativity. But most of all, you must be very patient to redo the same thing over and over again. 
             </p>
             <button class="header-btn">Contact with me</button>
         </div>
