details section added

--- a/index.html
+++ b/index.html
@@ -20,5 +20,54 @@
             <button class="header-btn">Contact with me</button>
         </div>
     </header>
+    <main>
+        <section class="details-section">
+            <div class="details-content">
+                <h2 class="detail-title">
+                    Why Web Development??
+                </h2>
+                <p class="detail-para">
+                    Web development, also known as website development, refers to the tasks associated with creating, building, and maintaining websites and web applications that run online on a browser. It may, however, also include web design, web programming, and database management.
+                </p>
+            </div>
+            <div class="details-box">
+                <div class="div1-design">
+                    <div class="div1-content">
+                        <h3 class="div1-title">I will Do Coding and Change The World</h3>
+                        <p class="div1-para"> Coding has been changing the world since it was first invented.
+                        </p>
+                        <button class="div1-btn">Learn More</button>
+                    </div>
+                    <div class="div1-image">
+                        <img src="./assets/Layer_1.png" alt="">
+                    </div>
+                </div>
+                <div class="div2-design">
+                    <div class="div1-image">
+                        <img src="./assets/Group 3.png" alt="">
+                    </div>
+                    <div class="div1-content">
+                        <h3 class="div1-title">I will help People by creating Modern Web System</h3>
+                        <p class="div1-para">
+                            Coding has been changing the world since it was first invented.
+                        </p>
+                        <button class="div1-btn">Learn More</button>
+                    </div>
+                </div>
+                <div class="div1-design">
+                    <div class="div1-content">
+                        <h3 class="div1-title">I will Do Coding and Change The World</h3>
+                        <p class="div1-para">
+                            Coding has been changing the world since it was first invented.
+                        </p>
+                        <button class="div1-btn">Learn More</button>
+                    </div>
+                    <div class="div1-image">
+                        <img src="./assets/Group 4.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
