inspiration section added

--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
                 </div>
             </div>
         </section>
+        <section class="inspiration-section">
+            <div class="inpiration-content">
+                <h2 class="inspi-title">My Inspiration</h2>
+                <p class="inspi-para">Jhankar Mahbub is not just a name, he is a symbol of inspiration for many aspiring programmers and tech enthusiasts in Bangladesh.</p>
+            </div>
+            <div class="inspiration-video">
+                <iframe width="860" height="350" src="https://www.youtube.com/embed/5O5e0nnVulY?si=O9Qd9mbUbllr05vv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
+        
     </main>
 </body>
 </html>
