skills section added

--- a/index.html
+++ b/index.html
@@ -77,7 +77,49 @@
                 <iframe width="860" height="350" src="https://www.youtube.com/embed/5O5e0nnVulY?si=O9Qd9mbUbllr05vv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </section>
-        
+        <section class="skills-section">
+            <div class="skills-content">
+                <h2 class="skill-title">My Current Target</h2>
+                <p class="skill-para">
+                    Front-end web developers work on the visual part of the website—the pages visitors see and interact with (also known as the user interface). They design the physical layout of each page, integrate graphics, and use HTML and JavaScript to enhance the site. 
+                </p>
+            </div>
+            <div class="skills-card">
+                <div class="skill-div1">
+                    <div class="skill-box">
+                        <div class="skill-image">
+                            <img src="./assets/html.png" alt="">
+                        </div>
+                        <h3 class="box-title">HTML</h3>
+                        <p class="box-para">HyperText Markup Language (HTML) is the standard markup language for documents designed.</p>
+                        <a href="" class="skill-btn">Learn More</a>
+                    </div>
+                </div>
+                <div class="skill-div1" style="background-color: rgba(0, 76, 232, 0.05);">
+                    <div class="skill-box">
+                        <div class="skill-image">
+                            <img src="./assets/css.png" alt="">
+                        </div>
+                        <h3 class="box-title">CSS</h3>
+                        <p class="box-para">CSS is used to define styles for your web pages, including the design, layoutand screen sizes.
+                        </p>
+                        <a href="" class="skill-btn">Learn More</a>
+                    </div>
+                </div>
+                <div class="skill-div1" style="background-color: rgba(255, 223, 0, 0.05);"">
+                    <div class="skill-box">
+                        <div class="skill-image">
+                            <img src="./assets/js.png" alt="">
+                        </div>
+                        <h3 class="box-title">JavaScript</h3>
+                        <p class="box-para">
+                            JavaScript is a scripting or programming language that allows implement complex on web pages 
+                        </p>
+                        <a href="" class="skill-btn">Learn More</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
