feedback section & design added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>MyFirst Assignment</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
             <p class="header-para">
                 Web development is no child’s play. You need to have the right skill set. You must be able to play with your creativity. But most of all, you must be very patient to redo the same thing over and over again. 
             </p>
-            <button class="header-btn">Contact with me</button>
+            <button class="header-btn"><a href="#help"><i class="fa-solid fa-phone"></i> Contact with me</a></button>
         </div>
     </header>
     <main>
@@ -92,7 +93,7 @@
                         </div>
                         <h3 class="box-title">HTML</h3>
                         <p class="box-para">HyperText Markup Language (HTML) is the standard markup language for documents designed.</p>
-                        <a href="" class="skill-btn">Learn More</a>
+                        <a href="https://www.w3schools.com/html/" class="skill-btn">Learn More</a>
                     </div>
                 </div>
                 <div class="skill-div1" style="background-color: rgba(0, 76, 232, 0.05);">
@@ -103,7 +104,7 @@
                         <h3 class="box-title">CSS</h3>
                         <p class="box-para">CSS is used to define styles for your web pages, including the design, layoutand screen sizes.
                         </p>
-                        <a href="" class="skill-btn">Learn More</a>
+                        <a href="https://www.w3schools.com/css/" class="skill-btn">Learn More</a>
                     </div>
                 </div>
                 <div class="skill-div1" style="background-color: rgba(255, 223, 0, 0.05);"">
@@ -113,10 +114,24 @@
                         </div>
                         <h3 class="box-title">JavaScript</h3>
                         <p class="box-para">
-                            JavaScript is a scripting or programming language that allows implement complex on web pages 
+                            JavaScript is a scripting or programming language that allows implement complex on web pages. 
                         </p>
-                        <a href="" class="skill-btn">Learn More</a>
+                        <a href="https://www.w3schools.com/js/" class="skill-btn">Learn More</a>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="feedback-section" id="help">
+            <div class="feedback-box">
+                <div class="feedback-content">
+                    <h3 class="feedbck-tile">I need Support</h3>
+                    <p class="feedback-para">
+                        Whether you need help building a project, reviewing code, or debugging, our Web Development experts are ready to help.
+                    </p>
+                </div>
+                <div class="feedback-inputbox">
+                    <input type="text" name="" id="feedback" placeholder="suggest me any feedback for me">
+                    <input type="submit" id="submit-btn" value="Submit">
                 </div>
             </div>
         </section>
