footer section added

--- a/index.html
+++ b/index.html
@@ -136,5 +136,27 @@
             </div>
         </section>
     </main>
+    <footer class="footer-section">
+        <div class="footer-content">
+            <h5 class="footer-title">An Open commitment by Provakar Saha</h5>
+        </div>
+        <div class="footer-icon">
+            <div class="icon-box">
+                <a href="https://www.facebook.com/">
+                    <img src="./assets/facebook.png"  alt="">
+                </a>
+            </div>
+            <div class="icon-box">
+                <a href="https://github.com/">
+                    <img src="./assets/github.png" alt="">
+                </a>
+            </div>
+            <div class="icon-box">
+                <a href="https://www.linkedin.com/">
+                    <img src="./assets/linkedin-icon 1.png" alt="">
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
