header button click link to footer

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
             </div>
         </section>
-        <section class="feedback-section" id="help">
+        <section class="feedback-section">
             <div class="feedback-box">
                 <div class="feedback-content">
                     <h3 class="feedbck-tile">I need Support</h3>
@@ -136,7 +136,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer-section">
+    <footer class="footer-section" id="help">
         <div class="footer-content">
             <h5 class="footer-title">An Open commitment by Provakar Saha</h5>
         </div>
